--- a/source/locale/cs_CZ/LC_MESSAGES/install/index.po
+++ b/source/locale/cs_CZ/LC_MESSAGES/install/index.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-18 08:55+0200\n"
+"POT-Creation-Date: 2020-06-30 08:44+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
 "Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>, 2018\n"
 "Language-Team: Czech (Czech Republic) (https://www.transifex.com/glpi/teams/87042/cs_CZ/)\n"
@@ -234,23 +234,17 @@ msgstr ""
 
 #: ../../source/install/index.rst:74
 msgid ""
-"GLPI configuration will be stored in ``/etc/glpi``, just copy the ``config``"
-" directory to this place. GLPI requires read rights on this directory to "
-"work; and write rights during the installation process."
+"GLPI configuration will be stored in ``/etc/glpi``, just copy the contents "
+"of the ``config`` directory to this place. GLPI requires read rights on this"
+" directory to work; and write rights during the installation process."
 msgstr ""
-"Nastavení GLPI budou ukládána do ``/etc/glpi``, stačí jen zkopírovat složku "
-"``config`` do /etc. Pro běžný provoz potřebuje GLPI v této složce pouze "
-"práva na čtení. Jen pro potřeby instalace je třeba dočasně přidat i práva "
-"pro zápis."
 
 #: ../../source/install/index.rst:76
 msgid ""
-"GLPI data will be stored in ``/var/lib/glpi``, just copy the ``files`` "
-"directory to this place. GLPI requires read and write rights on this "
-"directory."
+"GLPI data will be stored in ``/var/lib/glpi``, just copy the contents of the"
+" ``files`` directory to this place. GLPI requires read and write rights on "
+"this directory."
 msgstr ""
-"Data GLPI budou ukládána do ``/var/lib/glpi``, stačí jen zkopírovat složku "
-"``files` do /var/lib`. GLPI potřebuje práva na čtení a zápis do této složky."
 
 #: ../../source/install/index.rst:78
 msgid ""
