--- a/source/locale/de_DE/LC_MESSAGES/install/index.po
+++ b/source/locale/de_DE/LC_MESSAGES/install/index.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-18 08:55+0200\n"
+"POT-Creation-Date: 2020-06-30 08:44+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
 "Last-Translator: Stephan <stephan.rennert@web.de>, 2018\n"
 "Language-Team: German (Germany) (https://www.transifex.com/glpi/teams/87042/de_DE/)\n"
@@ -231,24 +231,17 @@ msgstr ""
 
 #: ../../source/install/index.rst:74
 msgid ""
-"GLPI configuration will be stored in ``/etc/glpi``, just copy the ``config``"
-" directory to this place. GLPI requires read rights on this directory to "
-"work; and write rights during the installation process."
+"GLPI configuration will be stored in ``/etc/glpi``, just copy the contents "
+"of the ``config`` directory to this place. GLPI requires read rights on this"
+" directory to work; and write rights during the installation process."
 msgstr ""
-"Die GLPI-Konfiguration wird in ``/etc/glpi`` gespeichert, kopieren Sie "
-"einfach das Verzeichnis ``config`` an diesen Ort. GLPI benötigt Leserechte "
-"auf diesem Verzeichnis, um zu funktionieren; und Schreibrechte während des "
-"Installationsprozesses."
 
 #: ../../source/install/index.rst:76
 msgid ""
-"GLPI data will be stored in ``/var/lib/glpi``, just copy the ``files`` "
-"directory to this place. GLPI requires read and write rights on this "
-"directory."
+"GLPI data will be stored in ``/var/lib/glpi``, just copy the contents of the"
+" ``files`` directory to this place. GLPI requires read and write rights on "
+"this directory."
 msgstr ""
-"GLPI-Daten werden in ``/var/lib/glpi`` gespeichert, kopieren Sie einfach das"
-" Verzeichnis ``files`` an diesen Ort. GLPI benötigt Lese- und Schreibrechte "
-"auf dieses Verzeichnis."
 
 #: ../../source/install/index.rst:78
 msgid ""
