--- a/source/locale/en_GB/LC_MESSAGES/install/index.po
+++ b/source/locale/en_GB/LC_MESSAGES/install/index.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-18 08:55+0200\n"
+"POT-Creation-Date: 2020-06-30 08:44+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -228,23 +228,23 @@ msgstr ""
 
 #: ../../source/install/index.rst:74
 msgid ""
-"GLPI configuration will be stored in ``/etc/glpi``, just copy the ``config``"
-" directory to this place. GLPI requires read rights on this directory to "
-"work; and write rights during the installation process."
+"GLPI configuration will be stored in ``/etc/glpi``, just copy the contents "
+"of the ``config`` directory to this place. GLPI requires read rights on this"
+" directory to work; and write rights during the installation process."
 msgstr ""
-"GLPI configuration will be stored in ``/etc/glpi``, just copy the ``config``"
-" directory to this place. GLPI requires read rights on this directory to "
-"work; and write rights during the installation process."
+"GLPI configuration will be stored in ``/etc/glpi``, just copy the contents "
+"of the ``config`` directory to this place. GLPI requires read rights on this"
+" directory to work; and write rights during the installation process."
 
 #: ../../source/install/index.rst:76
 msgid ""
-"GLPI data will be stored in ``/var/lib/glpi``, just copy the ``files`` "
-"directory to this place. GLPI requires read and write rights on this "
-"directory."
+"GLPI data will be stored in ``/var/lib/glpi``, just copy the contents of the"
+" ``files`` directory to this place. GLPI requires read and write rights on "
+"this directory."
 msgstr ""
-"GLPI data will be stored in ``/var/lib/glpi``, just copy the ``files`` "
-"directory to this place. GLPI requires read and write rights on this "
-"directory."
+"GLPI data will be stored in ``/var/lib/glpi``, just copy the contents of the"
+" ``files`` directory to this place. GLPI requires read and write rights on "
+"this directory."
 
 #: ../../source/install/index.rst:78
 msgid ""
