--- a/source/locale/pt_BR/LC_MESSAGES/install/index.po
+++ b/source/locale/pt_BR/LC_MESSAGES/install/index.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-18 08:55+0200\n"
+"POT-Creation-Date: 2020-06-30 08:44+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
 "Last-Translator: Rui Melo <viper5000pt@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/glpi/teams/87042/pt_BR/)\n"
@@ -241,24 +241,17 @@ msgstr ""
 
 #: ../../source/install/index.rst:74
 msgid ""
-"GLPI configuration will be stored in ``/etc/glpi``, just copy the ``config``"
-" directory to this place. GLPI requires read rights on this directory to "
-"work; and write rights during the installation process."
+"GLPI configuration will be stored in ``/etc/glpi``, just copy the contents "
+"of the ``config`` directory to this place. GLPI requires read rights on this"
+" directory to work; and write rights during the installation process."
 msgstr ""
-"A configuração do GLPI será armazenada em `` /etc/glpi``, basta copiar o "
-"diretório `` config`` para este local. O GLPI requer direitos de leitura "
-"neste diretório para funcionar; e direitos de gravação durante o processo de"
-" instalação."
 
 #: ../../source/install/index.rst:76
 msgid ""
-"GLPI data will be stored in ``/var/lib/glpi``, just copy the ``files`` "
-"directory to this place. GLPI requires read and write rights on this "
-"directory."
+"GLPI data will be stored in ``/var/lib/glpi``, just copy the contents of the"
+" ``files`` directory to this place. GLPI requires read and write rights on "
+"this directory."
 msgstr ""
-"Os dados GLPI serão armazenados em `` /var/lib/glpi``, basta copiar o "
-"diretório `` files`` para este local. O GLPI requer direitos de leitura e "
-"gravação neste diretório."
 
 #: ../../source/install/index.rst:78
 msgid ""
