--- a/source/locale/es_419/LC_MESSAGES/install/index.po
+++ b/source/locale/es_419/LC_MESSAGES/install/index.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-18 08:55+0200\n"
+"POT-Creation-Date: 2020-06-30 08:44+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
 "Last-Translator: Roberto Flores <robertocarlos.floresh@gmail.com>, 2018\n"
 "Language-Team: Spanish (Latin America) (https://www.transifex.com/glpi/teams/87042/es_419/)\n"
@@ -239,24 +239,17 @@ msgstr ""
 
 #: ../../source/install/index.rst:74
 msgid ""
-"GLPI configuration will be stored in ``/etc/glpi``, just copy the ``config``"
-" directory to this place. GLPI requires read rights on this directory to "
-"work; and write rights during the installation process."
+"GLPI configuration will be stored in ``/etc/glpi``, just copy the contents "
+"of the ``config`` directory to this place. GLPI requires read rights on this"
+" directory to work; and write rights during the installation process."
 msgstr ""
-"La configuración de GLPI se almacenará en ``/etc/glpi``, simplemente copie "
-"el directorio ``config`` a este lugar. GLPI requiere derechos de lectura en "
-"este directorio para funcionar; y derechos de escritura durante el proceso "
-"de instalación."
 
 #: ../../source/install/index.rst:76
 msgid ""
-"GLPI data will be stored in ``/var/lib/glpi``, just copy the ``files`` "
-"directory to this place. GLPI requires read and write rights on this "
-"directory."
+"GLPI data will be stored in ``/var/lib/glpi``, just copy the contents of the"
+" ``files`` directory to this place. GLPI requires read and write rights on "
+"this directory."
 msgstr ""
-"Los datos GLPI se almacenarán en ``/var/lib/glpi``, simplemente copie el "
-"directorio ``files`` a este lugar. GLPI requiere derechos de lectura y "
-"escritura en este directorio."
 
 #: ../../source/install/index.rst:78
 msgid ""
