--- a/source/locale/fr_FR/LC_MESSAGES/install/index.po
+++ b/source/locale/fr_FR/LC_MESSAGES/install/index.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-18 08:55+0200\n"
+"POT-Creation-Date: 2020-06-30 08:44+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
 "Last-Translator: Johan Cwiklinski <jcwiklinski@teclib.com>, 2020\n"
 "Language-Team: French (France) (https://www.transifex.com/glpi/teams/87042/fr_FR/)\n"
@@ -250,9 +250,9 @@ msgstr ""
 
 #: ../../source/install/index.rst:74
 msgid ""
-"GLPI configuration will be stored in ``/etc/glpi``, just copy the ``config``"
-" directory to this place. GLPI requires read rights on this directory to "
-"work; and write rights during the installation process."
+"GLPI configuration will be stored in ``/etc/glpi``, just copy the contents "
+"of the ``config`` directory to this place. GLPI requires read rights on this"
+" directory to work; and write rights during the installation process."
 msgstr ""
 "La configuration de GLPI sera stockée dans ``/etc/glpi/``, copier simplement"
 " le contenu du dossier ``config`` à cet endroit. GLPI requiert un accès en "
@@ -261,9 +261,9 @@ msgstr ""
 
 #: ../../source/install/index.rst:76
 msgid ""
-"GLPI data will be stored in ``/var/lib/glpi``, just copy the ``files`` "
-"directory to this place. GLPI requires read and write rights on this "
-"directory."
+"GLPI data will be stored in ``/var/lib/glpi``, just copy the contents of the"
+" ``files`` directory to this place. GLPI requires read and write rights on "
+"this directory."
 msgstr ""
 "Les données de GLPI seront stockées dans ``/var/lib/glpi/``, copier le "
 "contenu du dossier ``files`` à cet endroit. GLPI requiert les droits en "
