--- a/source/locale/fr_FR/LC_MESSAGES/prerequisites.po
+++ b/source/locale/fr_FR/LC_MESSAGES/prerequisites.po
@@ -5,16 +5,16 @@
 # 
 # Translators:
 # Anth Paw <chpego@chpego.fr>, 2018
-# Johan Cwiklinski <jcwiklinski@teclib.com>, 2019
+# Johan Cwiklinski <jcwiklinski@teclib.com>, 2020
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-18 08:55+0200\n"
+"POT-Creation-Date: 2020-06-30 08:44+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
-"Last-Translator: Johan Cwiklinski <jcwiklinski@teclib.com>, 2019\n"
+"Last-Translator: Johan Cwiklinski <jcwiklinski@teclib.com>, 2020\n"
 "Language-Team: French (France) (https://www.transifex.com/glpi/teams/87042/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -70,6 +70,8 @@ msgstr "PHP"
 msgid ""
 "As of 9.5 release, GLPI requires `PHP <http://php.net>`_ 7.2 or more recent."
 msgstr ""
+"Depuis la version 9.5, GLPI requiert `PHP <http://php.net>`_ 7.2 ou plus "
+"récent."
 
 #: ../../source/prerequisites.rst:26
 msgid ""
@@ -131,11 +133,11 @@ msgstr "``simplexml``;"
 
 #: ../../source/prerequisites.rst:42
 msgid "``xml``;"
-msgstr ""
+msgstr "``xml``;"
 
 #: ../../source/prerequisites.rst:43
 msgid "``intl``."
-msgstr ""
+msgstr "``intl``."
 
 #: ../../source/prerequisites.rst:46
 msgid "Optional extensions"
