--- a/source/locale/fr_FR/LC_MESSAGES/install/advanced-configuration.po
+++ b/source/locale/fr_FR/LC_MESSAGES/install/advanced-configuration.po
@@ -6,6 +6,7 @@
 # Translators:
 # Pierre Puiseux <ppuiseux@henix.fr>, 2020
 # Johan Cwiklinski <jcwiklinski@teclib.com>, 2020
+# Cédric Anne, 2020
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-06-30 08:44+0200\n"
 "PO-Revision-Date: 2019-11-18 19:58+0000\n"
-"Last-Translator: Johan Cwiklinski <jcwiklinski@teclib.com>, 2020\n"
+"Last-Translator: Cédric Anne, 2020\n"
 "Language-Team: French (France) (https://www.transifex.com/glpi/teams/87042/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -49,29 +50,38 @@ msgstr ""
 
 #: ../../source/install/advanced-configuration.rst:13
 msgid "``$dbsslkey`` path name to the key file (`null` per default)"
-msgstr "``$dbsslkey`` chemin vers le fichier de clé (`null` par défaut)"
+msgstr ""
+"``$dbsslkey`` chemin vers le fichier contenant la clé (`null` par défaut)"
 
 #: ../../source/install/advanced-configuration.rst:14
 msgid "``$dbsslcert`` path name to the certificate file (`null` per default)"
 msgstr ""
+"``$dbsslcert`` chemin vers le fichier contenant le certificat (`null` par "
+"défaut)"
 
 #: ../../source/install/advanced-configuration.rst:15
 msgid ""
 "``$dbsslca`` path name to the certificate authority file (`null` per "
 "default)"
 msgstr ""
+"``$dbsslca`` chemin vers le fichier contenant l'autorité du certificat "
+"(`null` par défaut)"
 
 #: ../../source/install/advanced-configuration.rst:16
 msgid ""
 "``$dbsslcapath`` pathname to a directory that contains trusted SSL CA "
 "certificates in PEM format (`null` per default)"
 msgstr ""
+"``$dbsslcapath`` chemin vers le dossier contenant les certificats SSL CA au "
+"format PEM (`null` par défaut)"
 
 #: ../../source/install/advanced-configuration.rst:17
 msgid ""
 "``$dbsslcacipher`` list of allowable ciphers to use for SSL encryption "
 "(`null` per default)"
 msgstr ""
+"``$dbsslcacipher`` liste des chiffres autorisés à être utilisés pour le "
+"chiffrage SSL (`null` par défaut)"
 
 #: ../../source/install/advanced-configuration.rst:21
 msgid ""
@@ -79,6 +89,9 @@ msgid ""
 "during the installation process. It has to be done once installation has "
 "been done."
 msgstr ""
+"Pour le moment, il n'est pas possible de définir les paramètres de connexion"
+" SSL avant ou pendant le processus d'installation. Ceci doit être fait une "
+"fois l'installation effectuée."
 
 #: ../../<rst_epilog>:2
 msgid "|ccbyncnd|"
