--- a/source/locale/fr_FR/LC_MESSAGES/update.po
+++ b/source/locale/fr_FR/LC_MESSAGES/update.po
@@ -5,17 +5,16 @@
 # 
 # Translators:
 # Anth Paw <chpego@chpego.fr>, 2018
-# Johan Cwiklinski <jcwiklinski@teclib.com>, 2018
-# Pierre Puiseux <ppuiseux@henix.fr>, 2020
+# Johan Cwiklinski <jcwiklinski@teclib.com>, 2020
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: GLPI 9.5\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-30 08:44+0200\n"
+"POT-Creation-Date: 2020-07-08 09:52+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
-"Last-Translator: Pierre Puiseux <ppuiseux@henix.fr>, 2020\n"
+"Last-Translator: Johan Cwiklinski <jcwiklinski@teclib.com>, 2020\n"
 "Language-Team: French (France) (https://www.transifex.com/glpi/teams/87042/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -56,7 +55,7 @@ msgstr ""
 "Tout d'abord, téléchargez la dernière version de GLPI et extrayez-en les "
 "fichiers. La processus de mie à jour de GLPI est automatique. Pour le "
 "démarrer , connectez-vous à votre URI GLPI, ou bien, (méthode recommandée), "
-"utilisez l' :doc:`outil en ligne de commande<command-line>`."
+"utilisez :doc:`l'outil en ligne de commande<command-line>`."
 
 #: ../../source/update.rst:14
 msgid ""
