--- a/source/locale/cs_CZ/LC_MESSAGES/prerequisites.po
+++ b/source/locale/cs_CZ/LC_MESSAGES/prerequisites.po
@@ -6,6 +6,7 @@
 # Translators:
 # Johan Cwiklinski <jcwiklinski@teclib.com>, 2018
 # Pavel Borecki <pavel.borecki@gmail.com>, 2018
+# David Stepan <stepand@tiscali.cz>, 2020
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-08 09:52+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
-"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>, 2018\n"
+"Last-Translator: David Stepan <stepand@tiscali.cz>, 2020\n"
 "Language-Team: Czech (Czech Republic) (https://www.transifex.com/glpi/teams/87042/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -70,13 +71,14 @@ msgstr "Interpret PHP"
 #: ../../source/prerequisites.rst:22
 msgid ""
 "As of 9.5 release, GLPI requires `PHP <http://php.net>`_ 7.2 or more recent."
-msgstr ""
+msgstr "Od verze 9.5 vyžaduje GLPI `PHP <http://php.net>` _ 7.2 nebo novější."
 
 #: ../../source/prerequisites.rst:26
 msgid ""
 "We recommend to use the most recent stable PHP release for better "
 "performances."
 msgstr ""
+"Pro lepší výkonnost doporučujeme použít nejnovější stabilní verzi PHP."
 
 #: ../../source/prerequisites.rst:29
 msgid "Mandatory extensions"
@@ -125,11 +127,11 @@ msgstr "``simplexml``;"
 
 #: ../../source/prerequisites.rst:42
 msgid "``xml``;"
-msgstr ""
+msgstr "``xml``;"
 
 #: ../../source/prerequisites.rst:43
 msgid "``intl``."
-msgstr ""
+msgstr "``intl``."
 
 #: ../../source/prerequisites.rst:46
 msgid "Optional extensions"
