--- a/source/locale/cs_CZ/LC_MESSAGES/update.po
+++ b/source/locale/cs_CZ/LC_MESSAGES/update.po
@@ -5,6 +5,7 @@
 # 
 # Translators:
 # Pavel Borecki <pavel.borecki@gmail.com>, 2018
+# David Stepan <stepand@tiscali.cz>, 2020
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-08 09:52+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
-"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>, 2018\n"
+"Last-Translator: David Stepan <stepand@tiscali.cz>, 2020\n"
 "Language-Team: Czech (Czech Republic) (https://www.transifex.com/glpi/teams/87042/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -51,6 +52,10 @@ msgid ""
 "is then automated. To start it, just go to your GLPI instance URI, or "
 "(recommended) use the :doc:`command line tools <command-line>`."
 msgstr ""
+"Nejprve si stáhněte poslední verzi GLPI a rozbalte soubory. Proces update "
+"GLPI bude následně atuomatický. Pro jeho spuštění přejděte na adresu vaší "
+"GLPI instance nebo (což je doporučeno) použijte :doc:`nástroje příkazové "
+"řádky <command-line>`."
 
 #: ../../source/update.rst:14
 msgid ""
