--- a/source/locale/pt_BR/LC_MESSAGES/prerequisites.po
+++ b/source/locale/pt_BR/LC_MESSAGES/prerequisites.po
@@ -7,6 +7,7 @@
 # Johan Cwiklinski <jcwiklinski@teclib.com>, 2018
 # Wanderlei Hüttel <wanderlei.huttel@gmail.com>, 2018
 # Rodrigo de Almeida Sottomaior Macedo <rmsolucoeseminformatic4@gmail.com>, 2020
+# Diego Nobre <diego@koruma.com.br>, 2020
 # 
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-08 09:52+0200\n"
 "PO-Revision-Date: 2018-02-20 11:33+0000\n"
-"Last-Translator: Rodrigo de Almeida Sottomaior Macedo <rmsolucoeseminformatic4@gmail.com>, 2020\n"
+"Last-Translator: Diego Nobre <diego@koruma.com.br>, 2020\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/glpi/teams/87042/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -71,6 +72,8 @@ msgstr "PHP"
 msgid ""
 "As of 9.5 release, GLPI requires `PHP <http://php.net>`_ 7.2 or more recent."
 msgstr ""
+"A partir da versão 9.5, o GLPI requer `PHP <http://php.net>` _ 7.2 ou mais "
+"recente."
 
 #: ../../source/prerequisites.rst:26
 msgid ""
@@ -131,11 +134,11 @@ msgstr "``simplexml``;"
 
 #: ../../source/prerequisites.rst:42
 msgid "``xml``;"
-msgstr ""
+msgstr "``xml``;"
 
 #: ../../source/prerequisites.rst:43
 msgid "``intl``."
-msgstr ""
+msgstr "``intl``."
 
 #: ../../source/prerequisites.rst:46
 msgid "Optional extensions"
