--- a/source/locale/bg_BG/LC_MESSAGES/timezones.po
+++ b/source/locale/bg_BG/LC_MESSAGES/timezones.po
@@ -4,9 +4,7 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Wanderlei Hüttel <wanderlei.huttel@gmail.com>, 2020
-# Rui Melo <viper5000pt@gmail.com>, 2020
-# Rodrigo de Almeida Sottomaior Macedo <rmsolucoeseminformatica@protonmail.com>, 2020
+# Z K <zornitsa.koleva@mr-bricolage.bg>, 2020
 # 
 #, fuzzy
 msgid ""
@@ -15,17 +13,17 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-07-08 09:52+0200\n"
 "PO-Revision-Date: 2020-07-08 07:33+0000\n"
-"Last-Translator: Rodrigo de Almeida Sottomaior Macedo <rmsolucoeseminformatica@protonmail.com>, 2020\n"
-"Language-Team: Portuguese (Brazil) (https://www.transifex.com/glpi/teams/87042/pt_BR/)\n"
+"Last-Translator: Z K <zornitsa.koleva@mr-bricolage.bg>, 2020\n"
+"Language-Team: Bulgarian (Bulgaria) (https://www.transifex.com/glpi/teams/87042/bg_BG/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: bg_BG\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../../source/timezones.rst:2
 msgid "Timezones"
-msgstr "Fuso Horários"
+msgstr "Времеви зони"
 
 #: ../../source/timezones.rst:4
 msgid ""
@@ -33,37 +31,28 @@ msgid ""
 " to initialize Timezones data and grant GLPI database user read ACL on their"
 " table."
 msgstr ""
-"Para que os fusos horários funcionem em uma instância do MariaDB/MySQL, você"
-" precisará inicializar os dados dos fusos horários e permitir que o usuário "
-"do banco de dados GLPI leia a ACL em sua tabela."
 
 #: ../../source/timezones.rst:8
 msgid ""
 "Enabling timezone support on your MySQL instance may affect other database "
 "in the same instance; be carefull!"
 msgstr ""
-"Habilitar o suporte ao fuso horário na sua instância do MySQL pode afetar "
-"outro banco de dados na mesma instância; seja cuidadoso!"
 
 #: ../../source/timezones.rst:12
 msgid ""
 "Currently, MySQL and MariaDB have a maximum date limited to 2038-01-19 on "
 "fields relying on ``timestamp`` type!"
 msgstr ""
-"Atualmente, o MySQL e o MariaDB têm uma data máxima limitada a 2038-01-19 em"
-" campos que dependem do tipo ``timestamp``!"
 
 #: ../../source/timezones.rst:15
 msgid "Non windows users"
-msgstr "Utilizadores não Windows"
+msgstr "Не windows потребители"
 
 #: ../../source/timezones.rst:17
 msgid ""
 "On most systems, you'll have to initialize timezones data from your system's"
 " timezones:"
 msgstr ""
-"Na maioria dos sistemas, você precisará inicializar os dados dos fusos "
-"horários a partir dos fusos horários do sistema:"
 
 #: ../../source/timezones.rst:23
 msgid ""
@@ -72,49 +61,41 @@ msgid ""
 "documentation to know where data are stored (if not in "
 "``/usr/share/zoneinfo``)."
 msgstr ""
-"Você pode verificar a documentação do `MariaDB sobre mysql_tzinfo_to_sql "
-"<https://mariadb.com/kb/en/library/mysql_tzinfo_to_sql/>`_ e a documentação "
-"do sistema para saber onde os dados estão armazenados (se não estiver em "
-"``/usr/share/zoneinfo``)."
 
 #: ../../source/timezones.rst:25
 msgid ""
 "Do not forget to restart the database server once command is successfull."
 msgstr ""
-"Não esqueça de reiniciar o servidor de banco de dados quando o comando for "
-"bem-sucedido."
+"Не забравяйте да рестартирате сървъра с базата след като командата се "
+"изпълни успешно."
 
 #: ../../source/timezones.rst:28
 msgid "Windows users"
-msgstr "Utilizadores Windows"
+msgstr "Windows потребители"
 
 #: ../../source/timezones.rst:30
 msgid ""
 "Windows does not provide timezones informations, you'll have to download and"
 " intialize data yourself."
 msgstr ""
-"O Windows não fornece informações de fuso horário, você precisará baixar e "
-"inicializar os dados por conta própria."
 
 #: ../../source/timezones.rst:32
 msgid ""
 "See `MariaDB documentation about timezones "
 "<https://mariadb.com/kb/en/library/time-zones/#mysql-time-zone-tables>`_."
 msgstr ""
-"Consulte a `documentação do MariaDB sobre fusos horários "
+"Прегледайте документацията на `MariaDB за времевите зони "
 "<https://mariadb.com/kb/en/library/time-zones/#mysql-time-zone-tables>`_."
 
 #: ../../source/timezones.rst:35
 msgid "Grant access"
-msgstr "Garantir o acesso"
+msgstr "Предостави достъп"
 
 #: ../../source/timezones.rst:39
 msgid ""
 "Be carefull not to give your GLPI database user too large access. System "
 "tables should **never** grant access to app users."
 msgstr ""
-"Cuidado para não conceder muito acesso ao usuário do banco de dados GLPI. As"
-" tabelas do sistema nunca devem conceder acesso aos usuários do aplicativo."
 
 #: ../../source/timezones.rst:41
 msgid ""
@@ -122,9 +103,6 @@ msgid ""
 "access on ``mysql.time_zone_name`` table. Assuming your user is "
 "``glpi@localhost``, you should run something like:"
 msgstr ""
-"Para listar possíveis fusos horários, o usuário do banco de dados GLPI deve "
-"ter acesso de leitura na tabela `` mysql.time_zone_name``. Supondo que seu "
-"usuário seja ``glpi@localhost``, você deve executar algo como:"
 
 #: ../../<rst_epilog>:2
 msgid "|ccbyncnd|"
